WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78619
IndexedDB: Chromium WebKit API support for IDBObjectStore.delete(IDBKeyRange)
https://bugs.webkit.org/show_bug.cgi?id=78619
Summary
IndexedDB: Chromium WebKit API support for IDBObjectStore.delete(IDBKeyRange)
Joshua Bell
Reported
2012-02-14 11:01:31 PST
IndexedDB: Chromium WebKit API support for IDBObjectStore.delete(IDBKeyRange)
Attachments
Patch
(1.95 KB, patch)
2012-02-14 11:02 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.94 KB, patch)
2012-02-16 11:10 PST
,
Joshua Bell
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joshua Bell
Comment 1
2012-02-14 11:02:54 PST
Created
attachment 126998
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-15 01:22:56 PST
Attachment 126998
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: [Mac][Win][WK2] Switch to RFC 6455 protocol for WebSockets Using index info to reconstruct a base tree... <stdin>:1578: trailing whitespace. <stdin>:1647: trailing whitespace. <stdin>:1657: trailing whitespace. <stdin>:1672: trailing whitespace. return 0; <stdin>:1674: trailing whitespace. warning: squelched 7 whitespace errors warning: 12 lines add whitespace errors. Falling back to patching base and 3-way merge... warning: too many files (created: 168753 deleted: 3), skipping inexact rename detection Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/wk2/Skipped Auto-merging Source/WebCore/ChangeLog Auto-merging Source/WebCore/css/CSSCalculationValue.cpp Auto-merging Source/WebCore/css/CSSCalculationValue.h Auto-merging Source/WebCore/css/CSSParser.cpp Auto-merging Source/WebKit/mac/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit/mac/ChangeLog Auto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Auto-merging Tools/ChangeLog CONFLICT (content): Merge conflict in Tools/ChangeLog Failed to merge in the changes. Patch failed at 0001 [Mac][Win][WK2] Switch to RFC 6455 protocol for WebSockets When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Joshua Bell
Comment 3
2012-02-15 16:52:53 PST
This is Part 1 of 2. Part 2 is:
http://webkit.org/b/78399
Darin, can you r? this?
Joshua Bell
Comment 4
2012-02-16 11:10:55 PST
Created
attachment 127413
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-02-16 16:10:25 PST
Comment on
attachment 127413
[details]
Patch for landing Clearing flags on attachment: 127413 Committed
r107993
: <
http://trac.webkit.org/changeset/107993
>
WebKit Review Bot
Comment 6
2012-02-16 16:10:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug