IndexedDB: Chromium WebKit API support for IDBObjectStore.delete(IDBKeyRange) https://bugs.webkit.org/show_bug.cgi?id=78619

Add an overload to WebIDBObjectStore::deleteFunction(). First part of a two-sided patch.

Reviewed by Darin Fisher.

* public/WebIDBObjectStore.h:
(WebKit::WebIDBObjectStore::deleteFunction):


Canonical link: https://commits.webkit.org/95827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107993 268f45cc-cd09-0410-ab3c-d52691b4dbfc